--- a/package.json
+++ b/package.json
@@ -6,11 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretty": "prettier --write .",
+    "prepare": "husky install",
+    "all": "yarn pretty && yarn lint && yarn build"
   },
   "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
+    "@project-serum/anchor": "^0.23.0",
+    "@solana/spl-token": "^0.2.0",
+    "@solana/wallet-adapter-base": "^0.9.5",
+    "@solana/wallet-adapter-react": "^0.15.4",
+    "@solana/wallet-adapter-react-ui": "^0.9.6",
+    "@solana/wallet-adapter-wallets": "^0.15.5",
+    "@solana/web3.js": "^1.37.0",
+    "axios": "^0.26.1",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "next": "12.1.2",
-    "react": "18.0.0",
+    "react": "^18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
@@ -19,6 +33,17 @@
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^7.0.4",
+    "prettier": "^2.6.1",
+    "prettier-eslint-cli": "^5.0.1",
+    "pretty-quick": "^3.1.3",
+    "sass": "^1.49.9",
     "typescript": "4.6.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick"
+    }
   }
 }
