--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.37.0",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "ioredis": "^5.0.2",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "next": "12.1.2",
