--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mobx-react": "^7.3.0",
     "next": "12.1.2",
     "react": "^18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-popper-tooltip": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
