--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.37.0",
     "axios": "^0.26.1",
+    "bignumber.js": "^9.0.2",
     "dotenv": "^16.0.0",
     "ioredis": "^5.0.2",
     "mobx": "^6.5.0",
