--- a/.env.local-example
+++ b/.env.local-example
@@ -1,3 +1,3 @@
 RPC_ENDPOINT=https://ssc-dao.genesysgo.net/
-REDIS_URL=redis://:7b07028900384c74bce7026ee0d94bf9@eu1-loved-akita-34868.upstash.io:34868
+SADREDIS_URL=redis://:7b07028900384c74bce7026ee0d94bf9@eu1-loved-akita-34868.upstash.io:34868
 NEXT_PUBLIC_FORM=
