--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^18.0.0",
     "react-dom": "18.0.0",
     "react-final-form": "^6.5.9",
-    "react-popper-tooltip": "^4.3.1"
+    "react-popper-tooltip": "^4.3.1",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
