--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier-eslint-cli": "^5.0.1",
     "pretty-quick": "^3.1.3",
     "sass": "^1.49.9",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.3"
   },
   "husky": {
