--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "final-form": "^4.20.6",
     "ioredis": "^5.0.2",
     "mobx": "^6.5.0",
+    "mobx-localstorage": "^1.2.0",
     "mobx-react": "^7.3.0",
     "next": "12.1.2",
     "react": "^18.0.0",
