--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-REACT_APP_RPC_ENDPOINT=https://ssc-dao.genesysgo.net/
-REACT_APP_REDIS_URL=redis://:7b07028900384c74bce7026ee0d94bf9@eu1-loved-akita-34868.upstash.io:34868
+REDIS_URL=redis://:7b07028900384c74bce7026ee0d94bf9@eu1-loved-akita-34868.upstash.io:34868
 NEXT_PUBLIC_FORM=
