--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "*.{css,scss,js,jsx,ts,tsx,html,md,json,yml}": ["yarn lint:prettier:fix"]
+  "*.{css,scss,ts,tsx,html,json}": ["yarn lint:prettier", "yarn lint:eslint"]
 }
