--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "start": "next start",
     "pretty": "prettier --write .",
     "prepare": "husky install",
-    "all": "yarn pretty && yarn lint && yarn build",
-    "ci": "yarn clean && yarn lint",
     "clean": "yarn clean:coverage && lerna run clean",
     "clean:coverage": "rm -rf coverage",
-    "lint": "yarn lint:prettier && yarn lint:package-json && yarn lint:eslint && echo 'complete!'",
-    "lint:prettier": "prettier --loglevel warn --check \"**/*.{scss,css,js,jsx,ts,tsx,html,md,json}\"",
-    "lint:package-json": "npmPkgJsonLint .",
-    "lint:eslint": "eslint \"**/*.{js,jsx,ts,tsx}\""
+    "lint": "yarn lint:prettier && yarn lint:package-json && yarn lint:eslint",
+    "lint:prettier": "prettier --loglevel warn --check \"**/*.{scss,css,js,jsx,ts,tsx,html}\"",
+    "lint:eslint": "eslint \"**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
@@ -47,6 +44,8 @@
     "react-toastify": "^8.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
     "@next/eslint-plugin-next": "^12.1.6",
     "@tsconfig/next": "^1.0.2",
     "@types/node": "17.0.23",
@@ -63,11 +62,9 @@
     "eslint-plugin-no-cyrillic-string": "^1.0.5",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-memo": "^0.0.3",
-    "husky": "^7.0.4",
+    "husky": "^8.0.0",
     "lerna": "^4.0.0",
     "lint-staged": "^12.4.1",
-    "npm-package-json-lint": "^6.3.0",
-    "npm-package-json-lint-config-default": "^5.0.0",
     "prettier": "^2.6.2",
     "prettier-eslint-cli": "^5.0.1",
     "pretty-quick": "^3.1.3",
