--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn
 
 # testing
 /coverage
@@ -19,6 +20,7 @@
 .DS_Store
 *.pem
 .idea
+.vscode
 
 # debug
 npm-debug.log*
