--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
   "*.{css,scss,ts,tsx,html,json}": ["yarn lint:prettier"],
-  "*{ts,tsx}": ["yarn lint:eslint"]
+  "*.{ts,tsx}": ["yarn lint:eslint"]
 }
