--- a/package.json
+++ b/package.json
@@ -73,5 +73,9 @@
     "sass": "^1.49.9",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.3"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
