--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clean:coverage": "rm -rf coverage",
     "lint": "yarn lint:prettier && yarn lint:package-json && yarn lint:eslint",
     "lint:prettier": "prettier --loglevel warn --check \"**/*.{scss,css,js,jsx,ts,tsx,html}\"",
-    "lint:eslint": "eslint \"**/*.{ts,tsx}\""
+    "lint:eslint": "eslint \"**/*.{ts,tsx}\" --cache"
   },
   "dependencies": {
     "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
