Only three loans per NFT and moved theme button to the Wallet dropdown (#150)
* User can't create more than three loan offers for each NFT nowa

* fix for vercel

* Center on mobile

* fixes

* fixes 2

* Remove placeholder div on non-mobile screens

Co-authored-by: praskoson <40672437+praskoson@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
       "@integration/*": ["./integration/*"],
       "@methods/*": ["./methods/*"],
       "@styles/*": ["./styles/*"],
-      "@icons/*": ["./icons/*"]
+      "@icons/*": ["./icons/*"],
+      "@types/*": ["./types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
