--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,7 +11,8 @@
       "@integration/*": ["./integration/*"],
       "@methods/*": ["./methods/*"],
       "@styles/*": ["./styles/*"],
-      "@icons/*": ["./icons/*"]
+      "@icons/*": ["./icons/*"],
+      "@types/*": ["./types/*"]
     }
   }
 }
