--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
     "final-form": "^4.20.6",
+    "final-form-calculate": "^1.3.2",
     "ioredis": "^5.0.2",
     "mobx": "^6.5.0",
     "mobx-localstorage": "^1.2.0",
     "mobx-react": "^7.3.0",
     "next": "12.1.2",
+    "rc-slider": "^10.0.0",
     "react": "^18.0.0",
     "react-dom": "18.0.0",
     "react-final-form": "^6.5.9",
