--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "4.6.3"
+    "typescript": "4.6.3",
+    "react-minimal-pie-chart": "^8.3.0"
   },
   "resolutions": {
     "@types/react": "17.0.2",
