--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lint:eslint": "eslint \"**/*.{ts,tsx}\" --cache"
   },
   "dependencies": {
-    "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
+    "@metaplex-foundation/beet": "^0.4.0",
+    "@metaplex-foundation/beet-solana": "^0.3.0",
+    "@metaplex-foundation/mpl-token-metadata": "1.2.5",
     "@project-serum/anchor": "^0.20.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.9.5",
@@ -29,6 +31,8 @@
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.37.0",
+    "@unloc-dev/unloc-loan-solita": "^2.0.1",
+    "@unloc-dev/unloc-sdk": "^0.2.2",
     "axios": "^0.26.1",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
