Freeze contract update (#184)
* Init changes

* Remove console log in nftLoan

* Update nft integration

* Update global data

* fix: state offset

* change the defaults to work on devnet

* fix: cancel collateral

* wip: create and cancel offers (deposit)

* wip: create suboffer, cancel suboffer

* wip: create/cancel suboffers, display front page suboffers

* fix: frontpage

* Change many things

* fix: build errors

* fix: update packags, accepted offers

* fix: transaction helpers

* Remove types directory

* feat: some error handling

* remove anchor dependancy in a few places

* Update web3, useSendTransaction hook

* fix: math when converting ui number to big number

* speed up spinner, remove unused code

* fix: eslint

* removed unused package

Co-authored-by: John Wilhelmsson <81255184+jwtradera@users.noreply.github.com>

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,8 +11,7 @@
       "@integration/*": ["./integration/*"],
       "@methods/*": ["./methods/*"],
       "@styles/*": ["./styles/*"],
-      "@icons/*": ["./icons/*"],
-      "@types/*": ["./types/*"]
+      "@icons/*": ["./icons/*"]
     }
   }
 }
