--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     "lint:eslint": "eslint \"**/*.{ts,tsx}\" --cache"
   },
   "dependencies": {
-    "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
+    "@metaplex-foundation/beet": "^0.4.0",
+    "@metaplex-foundation/beet-solana": "^0.3.0",
+    "@metaplex-foundation/cusper": "^0.0.2",
+    "@metaplex-foundation/mpl-token-metadata": "^2.2.3",
     "@project-serum/anchor": "^0.20.1",
-    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token": "0.3.2",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.4",
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.15.5",
-    "@solana/web3.js": "^1.37.0",
+    "@solana/web3.js": "^1.56.2",
+    "@unloc-dev/unloc-loan-solita": "^3.0.1",
+    "@unloc-dev/unloc-sdk": "^0.2.84",
     "axios": "^0.26.1",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
@@ -36,7 +41,6 @@
     "final-form-calculate": "^1.3.2",
     "ioredis": "^5.0.2",
     "mobx": "^6.5.0",
-    "mobx-localstorage": "^1.2.0",
     "mobx-react": "^7.3.0",
     "next": "12.1.2",
     "rc-slider": "^10.0.0",
@@ -44,13 +48,15 @@
     "react-dom": "18.0.0",
     "react-final-form": "^6.5.9",
     "react-popper-tooltip": "^4.3.1",
-    "react-toastify": "^8.2.0"
+    "react-toastify": "^8.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@next/eslint-plugin-next": "^12.1.6",
     "@tsconfig/next": "^1.0.2",
+    "@types/bn.js": "^5.1.1",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
