--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,7 @@
       "@integration/*": ["./integration/*"],
       "@methods/*": ["./methods/*"],
       "@styles/*": ["./styles/*"],
-      "@icons/*": ["./icons/*"],
-      "@types/*": ["./types/*"]
+      "@icons/*": ["./icons/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
