--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@solana/web3.js": "^1.56.2",
     "@unloc-dev/unloc-loan-solita": "^3.0.1",
     "@unloc-dev/unloc-sdk": "^0.2.84",
+    "@unloc-dev/unloc-staking-solita": "^2.0.0",
     "axios": "^0.26.1",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
