--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@metaplex-foundation/mpl-token-metadata": "^2.2.3",
     "@solana/spl-token": "0.3.2",
     "@solana/wallet-adapter-base": "^0.9.5",
+    "@solana/wallet-adapter-glow": "^0.1.12",
+    "@solana/wallet-adapter-ledger": "^0.9.19",
+    "@solana/wallet-adapter-phantom": "^0.9.16",
     "@solana/wallet-adapter-react": "^0.15.4",
     "@solana/wallet-adapter-react-ui": "^0.9.6",
+    "@solana/wallet-adapter-slope": "^0.5.15",
+    "@solana/wallet-adapter-solflare": "^0.6.16",
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.56.2",
     "@unloc-dev/unloc-loan-solita": "^3.0.1",
-    "@unloc-dev/unloc-sdk": "^0.2.84",
     "axios": "^0.26.1",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
@@ -40,7 +44,7 @@
     "final-form-calculate": "^1.3.2",
     "ioredis": "^5.0.2",
     "mobx": "^6.5.0",
-    "mobx-react": "^7.3.0",
+    "mobx-react-lite": "^3.4.0",
     "next": "12.1.2",
     "rc-slider": "^10.0.0",
     "react": "^18.0.0",
