add: integration of sachin's staking

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.56.2",
     "@unloc-dev/unloc-loan-solita": "^3.0.1",
+    "@unloc-dev/unloc-sdk-staking": "^0.0.1",
     "@unloc-dev/unloc-staking-solita": "^2.1.0",
     "axios": "^0.26.1",
     "dayjs": "^1.11.2",
