--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@unloc-dev/unloc-staking-solita": "^2.1.0",
     "axios": "^0.26.1",
     "dayjs": "^1.11.2",
+    "decimal.js": "^10.4.2",
     "dotenv": "^16.0.0",
     "final-form": "^4.20.6",
     "final-form-calculate": "^1.3.2",
