--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "0.1.0",
   "description": "UNLOC the full potential of your NFTs.",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "packages/eslint"
-    ]
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +11,7 @@
     "prepare": "husky install",
     "clean": "yarn clean:coverage && lerna run clean",
     "clean:coverage": "rm -rf coverage",
-    "lint": "yarn lint:prettier && yarn lint:package-json && yarn lint:eslint",
+    "lint": "yarn lint:prettier && yarn lint:eslint",
     "lint:prettier": "prettier --loglevel warn --check --write \"**/*.{scss,css,js,jsx,ts,tsx,html}\"",
     "lint:eslint": "eslint \"**/*.{ts,tsx}\" --cache"
   },
@@ -64,33 +59,30 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
-    "@next/eslint-plugin-next": "^12.1.6",
+    "@next/eslint-plugin-next": "^12.3.1",
     "@tsconfig/next": "^1.0.2",
     "@types/bn.js": "^5.1.1",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "8.12.0",
-    "eslint-config-next": "^12.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.2.9",
-    "eslint-plugin-no-cyrillic-string": "^1.0.5",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react-memo": "^0.0.3",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.10",
     "husky": "^8.0.0",
-    "lerna": "^4.0.0",
     "lint-staged": "^12.4.1",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "prettier-eslint-cli": "^5.0.1",
     "pretty-quick": "^3.1.3",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "4.6.3"
+    "typescript": "*"
   },
   "resolutions": {
     "@types/react": "17.0.2",
