--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "0.1.0",
   "description": "UNLOC the full potential of your NFTs.",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "packages/eslint"
-    ]
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +11,8 @@
     "prepare": "husky install",
     "clean": "yarn clean:coverage && lerna run clean",
     "clean:coverage": "rm -rf coverage",
-    "lint": "yarn lint:prettier && yarn lint:package-json && yarn lint:eslint",
+    "lint": "next lint",
+    "lint:all": "yarn lint:prettier && yarn lint:package-json && yarn lint:eslint",
     "lint:prettier": "prettier --loglevel warn --check --write \"**/*.{scss,css,js,jsx,ts,tsx,html}\"",
     "lint:eslint": "eslint \"**/*.{ts,tsx}\" --cache"
   },
@@ -64,7 +60,6 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
-    "@next/eslint-plugin-next": "^12.1.6",
     "@tsconfig/next": "^1.0.2",
     "@types/bn.js": "^5.1.1",
     "@types/node": "17.0.23",
@@ -74,15 +69,7 @@
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "8.12.0",
     "eslint-config-next": "^12.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.2.9",
-    "eslint-plugin-no-cyrillic-string": "^1.0.5",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react-memo": "^0.0.3",
     "husky": "^8.0.0",
-    "lerna": "^4.0.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "prettier-eslint-cli": "^5.0.1",
