--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-popper-tooltip": "^4.3.1",
     "react-skeleton-generator": "^1.1.3",
     "react-toastify": "^8.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
