--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,7 +79,8 @@
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-misused-promises": ["error", { "checksVoidReturn": false }],
     "react/display-name": "off",
-    "@typescript-eslint/strict-boolean-expressions": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/explicit-function-return-type": "off"
   },
   "settings": {
     "import/parsers": {
