--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "mobx-react-lite": "^3.4.0",
     "next": "12.1.2",
     "rc-slider": "^10.0.0",
-    "react": "^18.0.0",
+    "react": "17.0.2",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "18.0.0",
+    "react-dom": "17.0.2",
     "react-final-form": "^6.5.9",
     "react-popper-tooltip": "^4.3.1",
     "react-skeleton-generator": "^1.1.3",
@@ -67,8 +67,7 @@
     "@tsconfig/next": "^1.0.2",
     "@types/bn.js": "^5.1.1",
     "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
+    "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
@@ -88,9 +87,5 @@
     "sass": "^1.49.9",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "*"
-  },
-  "resolutions": {
-    "@types/react": "17.0.2",
-    "@types/react-dom": "17.0.2"
   }
 }
