--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -80,11 +81,13 @@
     "eslint-plugin-react": "^7.31.10",
     "husky": "^8.0.0",
     "lint-staged": "^12.4.1",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-eslint-cli": "^5.0.1",
     "pretty-quick": "^3.1.3",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
+    "tailwindcss": "^3.2.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "*"
   }
