--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/ws": "^8.5.3",
     "@unloc-dev/unloc-loan-solita": "^3.0.1",
     "@unloc-dev/unloc-sdk-liquidity-mining": "^0.1.28",
-    "@unloc-dev/unloc-sdk-loan": "0.1.26",
+    "@unloc-dev/unloc-sdk-loan": "^0.1.28",
     "@unloc-dev/unloc-sdk-staking": "^0.1.28",
     "@unloc-dev/unloc-sdk-voting": "^0.1.28",
     "@unloc-dev/unloc-staking-solita": "^2.1.0",
