--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "react-popper-tooltip": "^4.3.1",
     "react-skeleton-generator": "^1.1.3",
     "react-toastify": "^8.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
@@ -85,6 +86,7 @@
     "prettier": "^2.7.1",
     "prettier-eslint-cli": "^5.0.1",
     "pretty-quick": "^3.1.3",
+    "react-minimal-pie-chart": "^8.3.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
     "tailwindcss": "^3.2.1",
